# evasmainbot

./: .env  eva.sh  giveaways.json  keys.py  lastfm_user.json  main.py  pyproject.toml  requirements.txt  voice.db
Addons/: Antispam.py  Extras+.py  Profile+.py  Stats.py  afk.py  brole.py  commands.py  filter.py  fnick.py  lastfm.py  logs.py  logsetup.py  massmove.py  moderation.py  roll.py  settings.py  setup.py  tourny.py  tz.py  voice.py  warn.py
Commands/: giveaway.py  snipe.py
Configs/: config.yml
Logs/: logs.txt
Systems/: levelsys.py
